Date: xx.xx.xxxx
  Features:
    - Added a new type of accumulator: Small accumulator
    - Added a new type of accumulator: Advanced accumulator

  Bugfixes:
    - Fixed a bug where the wrong icons where used in the electric network info
    - Fixed a bug regarding the prerequisites of all wind turbines
    - Fixed a bug regarding stack sizes
    - Fixed typos in the german locale file
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 10.08.2023
  Optimizations:
    - Optimized the recipes and power output for nearly all wind turbines and solar panels
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 29.07.2023
  Features:
    - Added the french localization thanks to @Tweepy

  Bugfixes:
    - Fixed a bug where technology recipes where changed by other mods
    - Fixed a few typos in the english localization
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 27.04.2023
  Optimizations:
    - The changelog is now readable in-game
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 19.03.2023
  Bugfixes:
    - Fixed a bug regarding the heated water
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 18.03.2023
  Features:
    - Added a new type of solar panel: Smart solar panel
    - Added custom recipes for Krastorio 2 and Space Exploration

  Bugfixes:
    - Fixed a bug where the wind turbines had a "power input" option

  Optimizations:
    - Optimized the water distillation recipe
    - Optimized the big wind turbine recipe

  Changes:
    - Changed the modpack icon
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 15.03.2023
  Features: