@@ -1,6 +1,5 @@
-                                                    ---------------------------------------
-                                                    | This mod gets maintained by emirate. |
-                                                    ---------------------------------------
+# Better Energy Production v0.5.0
+###### by emirate.
 
-Better Energy production is a mod for [Factorio] (https://factorio.com) adding new buildings and items.
-This mod is still under development, means it can lead to performance problems, bugs etc. Please report bugs and problems at my Discord Server: https://discord.gg/T986dut8yx
+Better Energy production is a mod for [Factorio](https://factorio.com) adding new buildings and items.
+This mod is still under development, means it can lead to performance problems, bugs etc. Please report bugs and problems at my [Discord Server](https://discord.gg/T986dut8yx)
