@@ -59,7 +59,7 @@ rusty-wind-turbine=Creates: 38kW. A old rusty wind turbine which generates a sma
 wind-turbine=Creates: 65kW. A wind turbine which generates a good amount of electricity.
 advanced-wind-turbine=Creates: 155kW. A advanced wind turbine which generates a big amount of electricity.
 eco-wind-turbine=Creates: 107kW. A eco wind turbine which generates a good amount of electricity and absorbs pollution in the chunk.
-big-wind-turbine=Creates: 1.05MW. A big wind turbine which creates a large amount of electricity.
+big-wind-turbine=Creates: 1.1MW. A big wind turbine which creates a large amount of electricity.
 small-twin-solar-panel=A small solar panel which generates a very tiny amount of power.
 flat-solar-panel=A flat solar panel which creates a small  amount of electricity.
 advanced-solar-panel=A advanced solar panel which generates a little bit more power then normal.
